add filter list

--- a/deploy/charts/crds/threefs.aliyun.com_threefsclusters.yaml
+++ b/deploy/charts/crds/threefs.aliyun.com_threefsclusters.yaml
@@ -210,6 +210,10 @@ spec:
                   storageReplicas:
                     type: integer
                 type: object
+              filterList:
+                items:
+                  type: string
+                type: array
               meta:
                 properties:
                   nodes:
