--- a/docker/operator/mgmtd_main.toml
+++ b/docker/operator/mgmtd_main.toml
@@ -121,7 +121,7 @@ max_connections = 1
 
 [server.base.groups.listener]
 domain_socket_index = 1
-filter_list = []
+filter_list = {{ .filter_list }}
 listen_port = {{ .rdma_port }}
 listen_queue_depth = 4096
 rdma_accept_timeout = '15s'
@@ -179,7 +179,7 @@ max_connections = 1
 
 [server.base.groups.listener]
 domain_socket_index = 1
-filter_list = []
+filter_list = {{ .filter_list }}
 listen_port = {{ .tcp_port }}
 listen_queue_depth = 4096
 rdma_accept_timeout = '15s'
