--- a/docker/operator/storage_main.toml
+++ b/docker/operator/storage_main.toml
@@ -143,7 +143,7 @@ max_connections = 16
 
 [server.base.groups.listener]
 domain_socket_index = 1
-filter_list = []
+filter_list = {{ .filter_list }}
 listen_port = {{ .rdma_port }}
 listen_queue_depth = 4096
 rdma_accept_timeout = '15s'
@@ -201,7 +201,7 @@ max_connections = 16
 
 [server.base.groups.listener]
 domain_socket_index = 1
-filter_list = []
+filter_list = {{ .filter_list }}
 listen_port = {{ .tcp_port }}
 listen_queue_depth = 4096
 rdma_accept_timeout = '15s'
