add device filter

--- a/deploy/charts/crds/threefs.aliyun.com_threefsclusters.yaml
+++ b/deploy/charts/crds/threefs.aliyun.com_threefsclusters.yaml
@@ -133,6 +133,10 @@ spec:
                 - tcpPort
                 - user
                 type: object
+              deviceFilter:
+                items:
+                  type: string
+                type: array
               fdb:
                 properties:
                   clusterSize:
