--- a/deploy/charts/values.yaml
+++ b/deploy/charts/values.yaml
@@ -1,12 +1,12 @@
 imageInfo:
-  image: alibabacloudvcns/tfsc-operator:0728
-  tfsctImage: alibabacloudvcns/tfsct-operator:0728
+  image: vcns-registry.cn-hangzhou.cr.aliyuncs.com/vcns/vfsc-operator:filter-0828
+  tfsctImage: vcns-registry.cn-hangzhou.cr.aliyuncs.com/vcns/vfsct-operator:filter-0828
   imagePullPolicy: Always
   mutatingObjectLabelKey: threefs.aliyun.com/sidecar
   mutatingObjectLabelValue: threefs
   webhookSecretName: threefs-webhook-secret
   enableWebhook: true
-  webhookGenerateKeyImage: alibabacloudvcns/generate-keys:0728
+  webhookGenerateKeyImage: vcns-registry.cn-hangzhou.cr.aliyuncs.com/vcns/generate-keys:0725
   mutatePath: /mutate--v1-pod
   validatePath: /validate-threefs-aliyun-com-v1-threefscluster
   validatePath2: /validate-threefs-aliyun-com-v1-threefschaintable
@@ -15,22 +15,22 @@ imageInfo:
   enableTrace: false
 
 clickhouse:
-  image: alibabacloudvcns/clickhouse:25.1-jammy-20250411
+  image: vcns-registry.cn-hangzhou.cr.aliyuncs.com/vcns/clickhouse:25.1-jammy-20250411
 
 monitor:
-  image: alibabacloudvcns/alibabacloud-3fs:20250520
+  image: vcns-registry.cn-hangzhou.cr.aliyuncs.com/vcns/3fs:20250520-test
 
 mgmtd:
-  image: alibabacloudvcns/alibabacloud-3fs:20250520
+  image: vcns-registry.cn-hangzhou.cr.aliyuncs.com/vcns/3fs:20250520-test
 
 fdb:
-  image: alibabacloudvcns/fdb:0728
+  image: vcns-registry.cn-hangzhou.cr.aliyuncs.com/vcns/fdb:20250504
 
 meta:
-  image: alibabacloudvcns/alibabacloud-3fs:20250520
+  image: vcns-registry.cn-hangzhou.cr.aliyuncs.com/vcns/3fs:20250520-test
 
 storage:
-  image: alibabacloudvcns/alibabacloud-3fs:20250520
+  image: vcns-registry.cn-hangzhou.cr.aliyuncs.com/vcns/3fs:20250520-test
 
 fuse:
-  image: alibabacloudvcns/alibabacloud-3fs-fuse:0728
+  image: vcns-registry.cn-hangzhou.cr.aliyuncs.com/vcns/3fs:test0623-fuse
