--- a/docker/operator/Dockerfile.chaintable
+++ b/docker/operator/Dockerfile.chaintable
@@ -17,6 +17,7 @@ RUN mkdir -p /opt/3fs/data_placement
 COPY --from=builder /app/cmd/threefs-chaintable-operator/tfsct-operator /
 COPY ./docker/operator/data_placement.py /opt/3fs/data_placement/data_placement.py
 COPY ./docker/operator/gen_chain_table.py /opt/3fs/data_placement/gen_chain_table.py
+COPY ./docker/operator/admin_cli.toml /opt/3fs/etc/admin_cli_temp.toml
 
 RUN chmod +x /tfsct-operator
 
