--- a/docker/threefs/mgmtd_main_launcher.toml
+++ b/docker/threefs/mgmtd_main_launcher.toml
@@ -21,7 +21,7 @@ default_network_zone = 'UNKNOWN'
 default_pkey_index = 0
 default_roce_pkey_index = 0
 default_traffic_class = 0
-device_filter = []
+device_filter = ${DEVICE_FILTER}
 fork_safe = true
 prefer_ibdevice = true
 skip_inactive_ports = true
